# llocg-backend-api

./: .gitignore  Cargo.toml  README.md
migrations/: 20250926051200_initial_schema.down.sql  20250926051200_initial_schema.up.sql  20250926054258_add_rarity_mapping_table.down.sql  20250926054258_add_rarity_mapping_table.up.sql  20250926063308_normalize_skill_text.down.sql  20250926063308_normalize_skill_text.up.sql  20250926070000_add_name_variants_table.down.sql  20250926070000_add_name_variants_table.up.sql  20250926080000_add_group_variants_table.down.sql  20250926080000_add_group_variants_table.up.sql  20250927000000_normalize_card_name.down.sql  20250927000000_normalize_card_name.up.sql  20250928000000_populate_initial_data.down.sql  20250928000000_populate_initial_data.up.sql
src/: db.rs  lib.rs  main.rs  mod.rs  models.rs
src/handlers/: cards.rs  group_variants.rs  groups.rs  mod.rs  name_variants.rs  names.rs  rarities.rs  sets.rs  units.rs
src/handlers/variants/: mod.rs
tests/: common.rs  test_name_variants.rs  test_names.rs  test_rarities.rs  test_sets.rs  test_units.rs
