[package]
name = "llocg-backend-api"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
thiserror = "1.0.58"

[dev-dependencies]
serde_json = "1.0"
tower = { version = "0.4", features = ["full"] }
